--- a/action.yml
+++ b/action.yml
@@ -13,8 +13,10 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Install setup tools
-      run: pip3 install wheel setuptools
+    - name: Install and update setup tools
+      run: |
+        python -m pip install --upgrade pip
+        pip3 install wheel setuptools
       shell: bash
     - name: Install conan latest
       if: ${{ inputs.version == '' }}
@@ -29,9 +31,6 @@ runs:
         echo "/home/runner/.local/bin" >> $GITHUB_PATH
         echo "/Users/runner/Library/Python/3.9/bin" >> $GITHUB_PATH
         /Users/runner/Library/Python/3.9/bin/conan --version
-      shell: bash
-    - name: Fix path on MacOS
-      run: |
       shell: bash
     - name: Fill in output variable
       id: output_version
