--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
   steps:
     - name: Install and update setup tools
       run: |
-        python -m pip install --upgrade pip
+        /Library/Frameworks/Python.framework/Versions/3.11/bin/python -m pip install --upgrade pip
         pip3 install wheel setuptools
       shell: bash
     - name: Install conan latest
