--- a/action.yml
+++ b/action.yml
@@ -29,7 +29,8 @@ runs:
     - name: Fix path on Linux
       run: |
         echo "/home/runner/.local/bin" >> $GITHUB_PATH
-        echo "/Users/runner/Library/Python/3.9/bin" >> $GITHUB_PATH
+        echo "${HOME}/Library/Python/3.9/bin" >> $GITHUB_PATH
+        echo "${HOME}"
       shell: bash
     - name: Fill in output variable
       id: output_version
