--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,8 @@ runs:
         echo "/home/runner/.local/bin" >> $GITHUB_PATH
         echo "${HOME}/Library/Python/3.11/bin" >> $GITHUB_PATH
         echo "${HOME}"
+        echo "${HOME}/Library"
+        echo "${HOME}/Python"
       shell: bash
     - name: Fill in output variable
       id: output_version
